Proyecto2/k8s/api-python.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-python-svc
spec:
  ports:
  - name: api-python-port
    port: 3000
    targetPort: 3000
  selector:
      name: api-python-deploy
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python-deploy
  namespace: so1p2
spec:
  selector:
    matchLabels:
      name: api-python-deploy
  replicas: 1
  template:
    metadata:
      labels:
        name: api-python-deploy
    spec:
      containers:
      - name: api-python
        image: hugoses202002793/api-python
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: dockerhubpull
