Proyecto2/k8s/grcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: grcp-svc
spec:
  ports:
  - name: grcp-port
    port: 4000
    targetPort: 3800
  selector:
      name: grcp-deploy
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grcp-deploy
  namespace: so1p2
spec:
  selector:
    matchLabels:
      name: grcp-deploy
  replicas: 1
  template:
    metadata:
      labels:
        name: grcp-deploy
    spec:
      containers:
      - name: grcp-client
        image: hugoses202002793/grcp-client
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
        ports:
        - containerPort: 3800
      - name: grcp-server
        image: hugoses202002793/grcp-server
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
        ports:
        - containerPort: 3001
      imagePullSecrets:
        - name: dockerhubpull
