Proyecto2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1p2-ingress-grcp
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: so1p2
spec:
  ingressClassName: nginx
  rules:
  - host: so1p2.34.171.85.31.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grcp-svc
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1p2-ingress-python
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  namespace: so1p2
spec:
  ingressClassName: nginx
  rules:
  - host: so1p2.34.171.85.31.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-python-svc
            port:
              number: 3000
